added works page

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -124,7 +124,7 @@ body {
       position: absolute;
       bottom: 0;
       left: 0;
-      border-bottom: 1px solid currentColor;
+      border-bottom: 1px solid #fff;
       cursor: pointer;
       transform: translateX(-100%);
       transition: all 0.3s cubic-bezier(0.4, 0.6, 0.6, 1);
