--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -46,6 +46,10 @@
         text-transform: capitalize;
         font-weight: lighter;
         color: currentColor;
+
+        &.is-active {
+            font-weight: bold;
+        }
     }
 
     &__logo {
